- fix: load empty tags if none available instead of keeping tags from previous video - improvement: I/O status panel now uses a table format for better readability - new: button to check availability of videos and its tags (VideoList panel) - new: checkURL(url) verify if url is valid, returns a Promise

--- a/css/custom.css
+++ b/css/custom.css
@@ -362,6 +362,23 @@ textarea {
 .glyph-xs {
     font-size: 10px;
 }
+td.tdspacing {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+td.col_elapsed {
+    min-width: 8em;
+}
+
+.red {
+    color: red;
+}
+.green {
+    color: green;
+}
+.gray {
+    color: gray;
+}
 
 .block {
     display: inline-block;
